--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,3 @@
+/* app.css */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
+@import './theme.css';
