--- a/src/theme.css
+++ b/src/theme.css
@@ -1,6 +1,6 @@
 /* New Design */
 :root {
-    --primary-bg: #FFFF; /* Background color */
+    --primary-bg: #fff7f1; /* Background color */
     --primary-text: #1D4783; /* Dark green for text */
     --secondary-text: #010339; /* Muted green */
     --accent-color: #F5FAFE; /* Highlight color */
