--- a/src/theme.css
+++ b/src/theme.css
@@ -1,7 +1,7 @@
 /* New Design */
 :root {
     --primary-bg: #fff7f1; /* Background color */
-    --primary-text: #1D4783; /* Dark green for text */
+    --primary-text: #2B1B12; /* Dark green for text */
     --secondary-text: #010339; /* Muted green */
     --accent-color: #F5FAFE; /* Highlight color */
     --button-bg:#27466D; /* Button background */
