--- a/src/theme.css
+++ b/src/theme.css
@@ -5,7 +5,7 @@
     --secondary-text: #010339; /* Muted green */
     --primary-bg-dark: #fff7f1; /* Highlight color */
     --button-bg:#2b1b12; /* Button background */
-    --button-hover: #4c6f9b; /* Button hover */
+    --button-hover: #fae4d4; /* Button hover */
     --button-text: #fff; /* Button text */
     --light-blue: #EAF3FA;
     --font-family: 'Playfair Display', serif;
