--- a/src/theme.css
+++ b/src/theme.css
@@ -17,7 +17,9 @@
 .text-primary {
     color: var(--primary-text); /* Dark green for text */
 }
-
+.dark-primary{
+    color: var(--primary-bg-dark);
+}
 .text-secondary {
     color: var(--secondary-text); /* Muted green */
 }
