--- a/src/theme.css
+++ b/src/theme.css
@@ -3,7 +3,7 @@
     --primary-bg: #fff7f1; /* Background color */
     --primary-text: #2B1B12; /* Dark green for text */
     --secondary-text: #010339; /* Muted green */
-    --primary-bg-dark: #fff7f1; /* Highlight color */
+    --primary-bg-dark: #fae4d4; /* Highlight color */
     --button-bg:#2b1b12; /* Button background */
     --button-hover: #fae4d4; /* Button hover */
     --button-text: #fff; /* Button text */
