--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,37 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+    font-family: 'Aller';
+    src: url('./src/assets/fonts/Aller/Aller_Bd.ttf') format('truetype');
+    font-weight: 700; /* Bold */
+}
+
+@font-face {
+    font-family: 'Aller';
+    src: url('./src/assets/fonts/Aller/Aller_Rg.ttf') format('truetype');
+    font-weight: 400; /* Regular */
+}
+
+@font-face {
+    font-family: 'Aller';
+    src: url('./src/assets/fonts/Aller/Aller_Lt.ttf') format('truetype');
+    font-weight: 300; /* Light */
+}
+
+@font-face {
+    font-family: 'Aller';
+    src: url('./src/assets/fonts/Aller/Aller_It.ttf') format('truetype');
+    font-style: italic;
+    font-weight: 400; /* Italic Regular */
+}
+
+@font-face {
+    font-family: 'Aller';
+    src: url('./src/assets/fonts/Aller/Aller_BdIt.ttf') format('truetype');
+    font-style: italic;
+    font-weight: 700; /* Bold Italic */
+}
 
 /* Include your theme variables */
 :root {
